i915 kerner driver can't initialize two connected eDP outputs on BYT
- The the initialisation of the graphic card by the i915 kernel driver fails.
- Modesetting fails.
The bug appears from Ubuntu 18.04 and persists in Ubuntu 20.04.1 kernel:5.4 and 20.10 kernel:5.8.
The hardware: 00:02.0 VGA compatible controller: Intel Corporation Atom Processor Z36xxx/Z37xxx Series Graphics & Display (rev 11) platform: ALL
The bug appears only if both LVDS-Outputs are connected to TFT panels at the same time. feature: display/eDP regression
*** Expected (works at Ubuntu 16.04): The graphic card is properly initialized and the intel_backlight links appear:
ll /sys/class/backlight/ lrwxrwxrwx 1 root root 0 Feb 11 2016 intel_backlight -> ../../devices/pci0000:00/0000:00:02.0/drm/card0/card0-eDP-1/intel_backlight/ lrwxrwxrwx 1 root root 0 Feb 11 2016 intel_backlight -> ../../devices/pci0000:00/0000:00:02.0/drm/card0/card0-eDP-2/intel_backlight/
Both TFT panels connected via LVDS are on and are showing the desktop.
*** What happens instead: The the initialisation of the graphic card by the i915 kernel driver fails:
dmesg | grep dup [ 2.951765] sysfs: cannot create duplicate filename '/class/backlight/intel_backlight' [ 2.951792] sysfs_warn_dup.cold+0x17/0x35
The /sys/class/backlight/ directory is empty.
Modesetting fails: xrandr shows only one eDP-1 output and the disconnected but existent outputs HDMI-1 and VGA-1 are gone.
The TFT-Panels are off.