drm/i915/backlight: switch to unique backlight device names

Change the backlight device names from intel_backlight to
card%d-%s-backlight format, for example card0-eDP-1-backlight, to make
them unique. Otherwise, registering multiple backlight devices with
intel_backlight name will fail, regardless of whether they're two
connectors in the same device or two different devices.

Cc: Ville Syrjälä <ville.syrjala@linux.intel.com>
Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/2794
Signed-off-by: Jani Nikula <jani.nikula@intel.com>